--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
                     <p>About Us</p>
                 </div>
                 <div class="row gy-4">
-                    <div class="col-lg-7 position-relative about-img" style="background-image: url('./assets/images/staff.png');"
+                    <div class="col-lg-7 position-relative about-img" style="background-image: url('../images/staff.png');"
                     data-aos="fade-up" data-aos-delay="150">
                         <div class="call-us position-absolute">
                             <h2>About Restaurant</h2>
