--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
 
                         </div>
                     </div>
-                    <div class="col-lg-7 position-relative about-img" style="background-image: url('./assets/images/history.png');"
+                    <div class="col-lg-7 position-relative about-img" style="background-image: url('../images/history.png');"
                          data-aos="fade-up" data-aos-delay="150">
                         <div class="call-us position-absolute">
                             <h2>Our History</h2>
@@ -97,7 +97,7 @@
                 </div>
                 <hr>
                 <div class="row gy-4">
-                    <div class="col-lg-4 position-relative about-img" style="background-image: url('./assets/images/dish1.png');"
+                    <div class="col-lg-4 position-relative about-img" style="background-image: url('../images/dish1.png');"
                          data-aos="fade-up" data-aos-delay="150">
                         <div class="call-us position-absolute">
                             <h2>Specific</h2>
@@ -110,7 +110,7 @@
                             </p>
                         </div>
                     </div>
-                    <div class="col-lg-4 position-relative about-img" style="background-image: url('./assets/images/dish2.png');"
+                    <div class="col-lg-4 position-relative about-img" style="background-image: url('../images/dish2.png');"
                          data-aos="fade-up" data-aos-delay="150">
                         <div class="call-us position-absolute">
                             <h2>Delicacies</h2>
